Add vue frontend

--- a/client/package.json
+++ b/client/package.json
@@ -1,61 +1,39 @@
 {
-  "name": "projectname",
-  "version": "0.0.1",
-  "description": "",
-  "main": "webpack.config.js",
+  "name": "vue_client",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "ava",
-    "wp": "npm run build:dev",
-    "ww": "npm run watch",
-    "stats": "webpack --mode production --json --profile > stats.json",
-    "build": "webpack --config webpack.prod.js",
-    "build:dev": "webpack --config webpack.dev.js",
-    "watch": "webpack --watch --config webpack.dev.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "author": "",
-  "license": "Apache-2.0",
   "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0",
     "d3": "^5.12.0",
     "d3-extended": "^2.0.0",
     "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5",
-    "font-awesome": "~4.7.0",
-    "install": "^0.12.1",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15"
+    "d3-shape": "^1.3.5"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "@types/d3-scale": "^2.1.1",
     "@types/d3-selection": "^1.4.1",
-    "@types/jquery": "^3.3.31",
-    "@types/lodash": "^4.14.144",
-    "@types/mathjs": "^5.0.1",
-    "@types/node": "^9.6.52",
-    "@types/object-hash": "^1.3.0",
-    "@types/webgl2": "0.0.5",
-    "cache-loader": "^1.2.5",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "fork-ts-checker-webpack-plugin": "^0.4.15",
-    "html-webpack-externals-plugin": "^3.8.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "module-to-cdn": "^3.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.12.0",
-    "sass": "^1.23.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.20.3",
-    "thread-loader": "^1.1.5",
-    "ts-loader": "^4.2.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3"
   }
 }
