--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "d3": "^5.12.0",
     "d3-extended": "^2.0.0",
     "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5"
+    "d3-shape": "^1.3.5",
+    "font-awesome": "~4.7.0",
+    "install": "^0.12.1",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
