--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
     "d3": "^5.12.0",
     "d3-extended": "^2.0.0",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
+    "dedent": "^0.7.0",
     "font-awesome": "~4.7.0",
     "install": "^0.12.1",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "quill": "^1.3.7",
+    "vue": "^3.0.0",
+    "vue3-editor": "0.1.0-alpha.3"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
