--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue_client",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,40 +8,39 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "d3": "^5.12.0",
-    "d3-extended": "^2.0.0",
-    "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5",
-    "dedent": "^0.7.0",
-    "font-awesome": "~4.7.0",
-    "install": "^0.12.1",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
-    "quill": "^1.3.7",
-    "vue": "^3.0.0",
-    "vue3-editor": "0.1.0-alpha.3"
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "tiptap": "^1.30.0",
+    "tiptap-extensions": "^1.33.2",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@types/d3": "^5.7.2",
-    "@types/d3-scale": "^2.1.1",
-    "@types/d3-selection": "^1.4.1",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
-  }
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
