--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "d3": "^6.3.1",
+    "prosemirror-utils": "^0.9.6",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuetify": "^2.3.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,7 +25,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
