--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ Temporary Items
 # Ignore pre-trained models downloads, fine-tuned models and datasets
 backend/story_generator/downloaded/**
 backend/story_generator/style_transfer/**
+backend/outputs/**
 client/public/unsplash25k/**
