--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "tiptap": "^1.30.0",
     "tiptap-extensions": "^1.33.2",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
     "vuetify": "^2.3.21"
   },
   "devDependencies": {
