--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ Temporary Items
 # Ignore pre-trained models downloads, fine-tuned models and datasets
 backend/story_generator/downloaded/**
 backend/story_generator/style_transfer/**
+backend/unsplash-dataset/**
 client/public/unsplash25k/sketch_images1024/**
 
 # DVC 
