--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,8 @@ Temporary Items
 
 # Ignore pre-trained models downloads, fine-tuned models and datasets
 backend/story_generator/downloaded/**
-backend/story_generator/style_transfer/**
 backend/unsplash-dataset/**
-client/public/unsplash25k/sketch_images1024/**
+client/public/unsplash/**
 
 # DVC 
 .dvc/config
